refactor: приведение комментариев к одному стилю