@@ -20,16 +20,16 @@ public class InMemoryTaskManagerTest {
         taskManager = Managers.getDefault();
     }
 
-    // Тест добавления и получения задач по ID.
+    // Проверка добавления и получения задач по ID
     @Test
     public void testAddAndGetTasksById() {
-        Task task = new Task("Task 1", "Task Description", TaskStatus.NEW);
-        Epic epic = new Epic("Epic 1", "Epic Description");
+        Task task = new Task("Задача 1", "Описание задачи", TaskStatus.NEW);
+        Epic epic = new Epic("Эпик 1", "Описание эпика");
 
         taskManager.createTask(task);
         taskManager.createEpic(epic);
 
-        Subtask subtask = new Subtask("Subtask 1", "Subtask Description", TaskStatus.NEW);
+        Subtask subtask = new Subtask("Подзадача 1", "Описание подзадачи", TaskStatus.NEW);
         taskManager.createSubtask(subtask, epic);
 
         assertEquals(task, taskManager.getTaskById(task.getId()), "Задача должна быть доступна по своему ID.");
@@ -37,120 +37,120 @@ public class InMemoryTaskManagerTest {
         assertEquals(subtask, taskManager.getSubtaskById(subtask.getId()), "Подзадача должна быть доступна по своему ID.");
     }
 
-    // Тест того, что сгенерированные ID не конфликтуют.
+    // Проверка отсутствия конфликтов сгенерированных ID
     @Test
     public void testNoIdConflict() {
-        Task task = new Task("Task 1", "Task Description", TaskStatus.NEW);
+        Task task = new Task("Задача 1", "Описание задачи", TaskStatus.NEW);
         task.setId(100);
         taskManager.createTask(task);
 
-        Task newTask = new Task("New Task", "New Task Description", TaskStatus.NEW);
+        Task newTask = new Task("Новая задача", "Новое описание", TaskStatus.NEW);
         taskManager.createTask(newTask);
 
         assertNotEquals(100, newTask.getId(), "Сгенерированный ID не должен конфликтовать с существующими ID.");
     }
 
-    // Тест обновления задачи.
+    // Проверка обновления задачи
     @Test
     public void testTaskModify() {
-        Task task = new Task("Task 1", "Task Description", TaskStatus.NEW);
+        Task task = new Task("Задача 1", "Описание задачи", TaskStatus.NEW);
         taskManager.createTask(task);
 
         Task savedTask = taskManager.getTaskById(task.getId());
-        savedTask.setName("Updated Task Name");
+        savedTask.setName("Обновлённое название задачи");
         taskManager.updateTask(savedTask);
 
         Task updatedTask = taskManager.getTaskById(task.getId());
-        assertEquals("Updated Task Name", updatedTask.getName(), "Имя задачи должно быть обновлено.");
+        assertEquals("Обновлённое название задачи", updatedTask.getName(), "Имя задачи должно быть обновлено.");
     }
 
-    // Тест менеджера истории.
+    // Проверка менеджера истории
     @Test
     public void testHistoryManager() {
-        Task task1 = new Task("Task 1", "Task Description 1", TaskStatus.NEW);
-        Task task2 = new Task("Task 2", "Task Description 2", TaskStatus.NEW);
+        Task task1 = new Task("Задача 1", "Описание 1", TaskStatus.NEW);
+        Task task2 = new Task("Задача 2", "Описание 2", TaskStatus.NEW);
         taskManager.createTask(task1);
         taskManager.createTask(task2);
 
-        // Просмотр задач.
+        // Просмотр задач
         taskManager.getTaskById(task1.getId());
         taskManager.getTaskById(task2.getId());
 
-        // Проверка истории.
+        // Проверка истории
         List<Task> history = taskManager.getHistory();
         assertEquals(2, history.size(), "История должна содержать две задачи.");
         assertEquals(task1, history.get(0), "Первая задача в истории должна быть task1.");
         assertEquals(task2, history.get(1), "Вторая задача в истории должна быть task2.");
     }
 
-    // Тест менеджера истории с удалением задачи.
+    // Проверка менеджера истории с удалением задачи
     @Test
     public void testHistoryManagerWithTaskDeletion() {
-        Task task1 = new Task("Task 1", "Task Description 1", TaskStatus.NEW);
-        Task task2 = new Task("Task 2", "Task Description 2", TaskStatus.NEW);
+        Task task1 = new Task("Задача 1", "Описание 1", TaskStatus.NEW);
+        Task task2 = new Task("Задача 2", "Описание 2", TaskStatus.NEW);
         taskManager.createTask(task1);
         taskManager.createTask(task2);
 
-        // Просмотр задач.
+        // Просмотр задач
         taskManager.getTaskById(task1.getId());
         taskManager.getTaskById(task2.getId());
 
-        // Удаление первой задачи.
+        // Удаление первой задачи
         taskManager.deleteTaskById(task1.getId());
 
-        // Проверка истории.
+        // Проверка истории
         List<Task> history = taskManager.getHistory();
         assertEquals(1, history.size(), "После удаления история должна содержать одну задачу.");
-        assertEquals(task2, history.getFirst(), "Оставшаяся задача должна быть task2.");
+        assertEquals(task2, history.get(0), "Оставшаяся задача должна быть task2.");
     }
 
-    // Тест удаления подзадачи из эпика.
+    // Проверка удаления подзадачи из эпика
     @Test
     public void testSubtaskDeletionFromEpic() {
-        Epic epic = new Epic("Epic 1", "Epic Description");
+        Epic epic = new Epic("Эпик 1", "Описание эпика");
         taskManager.createEpic(epic);
 
-        Subtask subtask1 = new Subtask("Subtask 1", "Subtask Description 1", TaskStatus.NEW);
+        Subtask subtask1 = new Subtask("Подзадача 1", "Описание подзадачи", TaskStatus.NEW);
         taskManager.createSubtask(subtask1, epic);
 
-        // Убедимся, что подзадача добавлена в эпик.
+        // Убедимся, что подзадача добавлена в эпик
         assertTrue(epic.getSubtaskIds().contains(subtask1.getId()), "Эпик должен содержать ID подзадачи.");
 
-        // Удаление подзадачи.
+        // Удаление подзадачи
         taskManager.deleteSubtaskById(subtask1.getId());
 
-        // Убедимся, что подзадача удалена из эпика.
+        // Убедимся, что подзадача удалена из эпика
         assertFalse(epic.getSubtaskIds().contains(subtask1.getId()), "Эпик не должен содержать удалённый ID подзадачи.");
     }
 
-    // Тест того, что удаление эпика удаляет его подзадачи.
+    // Проверка того, что удаление эпика удаляет его подзадачи
     @Test
     public void testEpicDeletionRemovesSubtasks() {
-        Epic epic = new Epic("Epic 1", "Epic Description");
+        Epic epic = new Epic("Эпик 1", "Описание эпика");
         taskManager.createEpic(epic);
 
-        Subtask subtask1 = new Subtask("Subtask 1", "Subtask Description 1", TaskStatus.NEW);
-        Subtask subtask2 = new Subtask("Subtask 2", "Subtask Description 2", TaskStatus.NEW);
+        Subtask subtask1 = new Subtask("Подзадача 1", "Описание подзадачи 1", TaskStatus.NEW);
+        Subtask subtask2 = new Subtask("Подзадача 2", "Описание подзадачи 2", TaskStatus.NEW);
         taskManager.createSubtask(subtask1, epic);
         taskManager.createSubtask(subtask2, epic);
 
-        // Удаление эпика.
+        // Удаление эпика
         taskManager.deleteEpicById(epic.getId());
 
-        // Убедимся, что подзадачи также удалены.
+        // Убедимся, что подзадачи также удалены
         assertNull(taskManager.getSubtaskById(subtask1.getId()), "Подзадача 1 должна быть удалена вместе с эпиком.");
         assertNull(taskManager.getSubtaskById(subtask2.getId()), "Подзадача 2 должна быть удалена вместе с эпиком.");
     }
 
-    // Тест изменения ассоциации подзадачи с эпиком.
+    // Проверка изменения ассоциации подзадачи с эпиком
     @Test
     public void testSubtaskEpicIdChangeThroughManager() {
-        Epic epic1 = new Epic("Epic 1", "Epic Description 1");
-        Epic epic2 = new Epic("Epic 2", "Epic Description 2");
+        Epic epic1 = new Epic("Эпик 1", "Описание эпика 1");
+        Epic epic2 = new Epic("Эпик 2", "Описание эпика 2");
         taskManager.createEpic(epic1);
         taskManager.createEpic(epic2);
 
-        Subtask subtask = new Subtask("Subtask", "Subtask Description", TaskStatus.NEW);
+        Subtask subtask = new Subtask("Подзадача", "Описание подзадачи", TaskStatus.NEW);
         taskManager.createSubtask(subtask, epic1);
 
         boolean updated = ((InMemoryTaskManager) taskManager).updateSubtaskEpic(subtask, epic2);
